# bg3tk

./: .gitignore  LICENSE  README.md  go.mod  go.work  go.work.sum  mise.toml
bg3vcs/: .gitignore  LICENSE  README.md  go.mod  main.go  tasks.toml
bg3vcs/cmd/: root.go
tests/: .gitignore  tasks.toml
tests/tools/: gen-docs.robot
tests/tools/testdata/: EmptyReadme.md  WantReadme.md
tools/: .gitignore  tasks.toml
tools/mdgen/: .gitignore  README.md  pyproject.toml
tools/mdgen/src/mdgen/: __init__.py  __main__.py
tools/mdgen/tests/: test_mdgen.py
tools/mdgen/tests/e2e/: test_cli.py
tools/templates/: readme.md.tmpl
