[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdgen"
version = "0.1.0"
description = "Lightweight markdown generation tool"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]
